10-storage-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: meshapp-storage
  namespace: meshapp
  labels:
    app: storage
    tier: storage
spec:
  selector:
    tier: storage
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
