07-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meshapp-ingress
  namespace: meshapp
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    external-dns.alpha.kubernetes.io/hostname: meshapp.registfylabs.online
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:345259854056:certificate/e76b196c-a1a1-42fc-b2e5-1947f9129212


spec:
  ingressClassName: "alb"
  rules:
    - host: meshapp.registfylabs.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: meshapp-ingress-gw
                port:
                  number: 3000
